--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-
-
 <html lang="en">
 <head>
 <meta charset="utf-8">
@@ -794,7 +792,7 @@
           <div class="form-group">
             <textarea name="message" id="message" class="form-control" rows="4" placeholder="Enter your message" required="required"></textarea>
           </div>
-          <a class="btn-send col-md-12 col-sm-12 col-xs-12" href="#">Send Now</a>
+          <a class="btn-send col-md-12 col-sm-12 col-xs-12" href="mailto:kinlylightingdesign@yahoo.com">Send Now</a>
         </form>
       </div>
     </div>
@@ -838,7 +836,3 @@
 <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
-
-<!-- Hosting24 Analytics Code -->
-<script type="text/javascript" src="http://stats.hosting24.com/count.php"></script>
-<!-- End Of Analytics Code -->
