--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a class="scroll" href="#menu">Home</a></li>
             <li><a class="scroll" href="#about">About</a></li>
-            <li><a class="scroll" href="#features">Service</a></li>
+            <li><a class="scroll" href="#features">Services</a></li>
             <li><a class="scroll" href="#portfolio">Portfolio</a></li>
             <li><a class="scroll" href="#pricing">Pricing</a></li>
             <li><a class="scroll" href="#contact">Contact</a></li>
