updated index page

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
     <li class="youtube hvr-pulse"><a href="https://www.youtube.com/watch?v=fkvyuN8vHEw"><i class="fa fa-youtube"></i></a></li>
     <li class="instagram hvr-pulse"><a href="https://www.instagram.com/kinlylightingdesign/"><i class="fa fa-instagram"></i></a></li>
     </ul>
-     <p> Created by A.N Mendoza. All Rights Reserved &copy; 2021. Last date updated : October 27, 2021</p> 
+     <p> Created by A.N Mendoza. &copy; 2021. Last date updated : November 17, 2021</p> 
 
 </footer>
 <!--Jquery-->
