--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
   <h2>Follow Us On</h2>
   <ul class="social-icon">
     <li class="youtube hvr-pulse"><a href="https://www.youtube.com/watch?v=fkvyuN8vHEw" target="_blank"><i class="fa fa-youtube"></i></a></li>
-    <li class="instagram hvr-pulse"><a href="https://www.instagram.com/kinlylightingdesigns" target="_blank"><i class="fa fa-instagram"></i></a></li>
+    <li class="instagram hvr-pulse"><a href="https://www.instagram.com/kinlylightingdesign" target="_blank"><i class="fa fa-instagram"></i></a></li>
     </ul>
      <p> Created by A.N Mendoza. &copy; 2021. Last date updated : November 17, 2021</p> 
 
